concord_macros/tests/dsl/fail/fail_map_before_response.stderr
error: map clause must appear after endpoint response
 --> tests/dsl/fail/fail_map_before_response.rs:9:9
  |
9 |         map String { r }
  |         ^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_map_before_response.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
